RESOLVED FIXED309102
AX: Property updates can be lost from reentrant queueNodeUpdate during processQueuedNodeUpdates
https://bugs.webkit.org/show_bug.cgi?id=309102
Summary AX: Property updates can be lost from reentrant queueNodeUpdate during proces...
Tyler Wilcock
Reported 2026-03-03 14:08:55 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-03 14:09:01 PST
Tyler Wilcock
Comment 2 2026-03-03 14:13:38 PST
EWS
Comment 3 2026-03-03 20:09:01 PST
Committed 308602@main (d0b051217fdc): <https://commits.webkit.org/308602@main> Reviewed commits have been landed. Closing PR #59826 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.